# rust-cross-build-w2l-script

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tools/: zigar.cmd  zigcc-linux-gnu.cmd  zigcc-linux-musl.cmd  zigcc.cmd
